# fys-stk4155

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml  requirements.txt
project_1/calc/: regression_terrain.ipynb  utils.jl  utils_franke.jl  utils_terrain.jl
project_1/code/: pytest.ipynb  regression.jl  test.ipynb
project_1/report/: _config.yml  _toc.yml  references.bib  report.md
project_1/report/docs/: method.md
project_1/report/tikz/: l1_l2_norms.tex  ols_geometric.tex
project_1/src/: regression.jl  test.ipynb
project_2/calc/: best_classification_configurations.txt  best_configurations.txt  classification_models_table.txt  ffnn_classification.ipynb  ffnn_regression.ipynb  gradient_descent.ipynb  hyperparameter_tuning_table.txt  hyperparameter_tuning_table_classification.txt  regression_models_table.txt  results.txt  ridge_momentum_hypertuning.txt
project_2/code/: activation.jl  cost.jl  data.jl  franke.jl  hypertuning.jl  hypertuning_parallel.jl  learning_rate.jl  neural_network.jl  optimization.jl  preprocessing.jl  regression.jl  score.jl  stats.jl  utils.jl
project_2/report/: references.bib  report.md
project_3/code/: calc_julia.ipynb  calc_python.ipynb
project_3/code/python/: heat_equation_euler.py  heat_equation_jax.py  heat_equation_keras.py  neural_network.py  tuning.py
project_3/report/: references.bib  report.md
report_template/: template.tex  template.yml
